# visaApproval_Evidently_Mlflow

./: .gitignore  LICENSE  README.md  data_dump.py  demo.py  project_flow.docx  pyproject.toml  requirements.txt  stage.md
artifact/01_21_2025_16_24_06/data_ingestion/ingested/: test.csv  train.csv
artifact/01_21_2025_16_24_06/data_transformation/transformed/: transformed_test.npy
artifact/01_21_2025_16_24_06/data_transformation/transformed_object/: preprocessing.pkl
artifact/01_21_2025_17_02_43/data_ingestion/ingested/: test.csv  train.csv
artifact/01_21_2025_17_02_43/data_transformation/transformed/: transformed_test.npy
artifact/01_21_2025_17_02_43/data_transformation/transformed_object/: preprocessing.pkl
artifact/02_01_2025_21_05_45/data_ingestion/feature_store/: usvisa.csv
artifact/02_01_2025_21_05_45/model_trainer/: best_model_details.json
artifact/03_27_2025_00_48_09/model_trainer/: best_model_details.json
artifact/03_27_2025_00_51_03/model_trainer/: best_model_details.json
config/: model.yaml  schema.yaml
us_visa/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
us_visa/configuration/: mongo_db_connection.py
us_visa/constants/: __init__.py
us_visa/data_access/: import_data.py
us_visa/entity/: GridSearch_Tuner.py  artifact_entity.py  config_entity.py  estimator.py  mlflow_experiment_evaluation.py  optuna_tuner.py
us_visa/exception/: __init__.py
us_visa/logger/: __init__.py
us_visa/pipeline/: training_pipeline.py
us_visa/utils/: main_utils.py  target_value_mapping.py
(+19 files in other folders)
